# exactobar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
exactobar-app/: Cargo.toml
exactobar-app/src/: actions.rs  icon.rs  main.rs  menu.rs  notifications.rs  refresh.rs  state.rs  theme.rs  tray.rs
exactobar-app/src/components/: mod.rs  provider_card.rs  provider_icon.rs  spinner.rs  toggle.rs  usage_bar.rs
exactobar-app/src/icon/: rendered.rs
exactobar-app/src/menu/: actions.rs  card.rs  error.rs  footer.rs  mod.rs  tabs.rs  usage.rs
exactobar-app/src/windows/: mod.rs
exactobar-app/src/windows/settings/: about.rs  advanced.rs  general.rs  mod.rs  providers.rs  theme.rs
exactobar-cli/: Cargo.toml
exactobar-cli/src/: main.rs
exactobar-cli/src/commands/: check.rs  config.rs  cost.rs  mod.rs  providers.rs  summary.rs  usage.rs  watch.rs
exactobar-cli/src/output/: json.rs  mod.rs  tests.rs  text.rs
exactobar-core/: Cargo.toml
exactobar-core/src/: error.rs  lib.rs  traits.rs
exactobar-core/src/models/: cost.rs  mod.rs  provider.rs  serde_tests.rs  status.rs  usage.rs
exactobar-core/tests/: snapshot_tests.rs
exactobar-fetch/: Cargo.toml
exactobar-fetch/src/: client.rs  context.rs  error.rs  lib.rs  pipeline.rs  probe.rs  retry.rs  strategy.rs
exactobar-fetch/src/host/: browser.rs  http.rs  keychain.rs  mod.rs  process.rs  pty.rs  status.rs
exactobar-fetch/tests/: pipeline_tests.rs
exactobar-providers/: Cargo.toml
exactobar-providers/src/: descriptor.rs  lib.rs  parser_edge_tests.rs  registry.rs
exactobar-providers/src/antigravity/: descriptor.rs  error.rs  fetcher.rs  mod.rs  probe.rs  strategies.rs
exactobar-providers/src/augment/: descriptor.rs  error.rs  fetcher.rs  mod.rs  parser.rs  strategies.rs  web.rs
exactobar-providers/src/claude/: api.rs  descriptor.rs  error.rs  fetcher.rs  mod.rs  oauth.rs  parser.rs  pty_probe.rs  strategies.rs  web.rs
exactobar-providers/src/codex/: auth.rs  descriptor.rs  error.rs  fetcher.rs  mod.rs  parser.rs  pty_probe.rs  rpc.rs  strategies.rs
exactobar-providers/src/copilot/: api.rs  descriptor.rs  device_flow.rs  error.rs  fetcher.rs  mod.rs  parser.rs  strategies.rs  token_store.rs
exactobar-providers/src/cursor/: descriptor.rs  error.rs  fetcher.rs  local.rs  mod.rs  parser.rs  strategies.rs  web.rs
exactobar-providers/src/factory/: descriptor.rs  error.rs  fetcher.rs  mod.rs  parser.rs  strategies.rs  web.rs
exactobar-providers/src/gemini/: api.rs  descriptor.rs  error.rs  fetcher.rs  gcloud.rs  mod.rs  parser.rs  probe.rs  pty_probe.rs  strategies.rs
exactobar-providers/src/kiro/: cli.rs  descriptor.rs  error.rs  fetcher.rs  mod.rs  parser.rs  strategies.rs
exactobar-providers/src/minimax/: descriptor.rs  error.rs  fetcher.rs  mod.rs  parser.rs  strategies.rs  web.rs
exactobar-providers/src/synthetic/: api.rs
exactobar-providers/src/vertexai/: credentials.rs  descriptor.rs  error.rs  fetcher.rs  logs.rs  mod.rs  parser.rs  strategies.rs
exactobar-providers/src/zai/: api.rs  descriptor.rs  error.rs  fetcher.rs  mod.rs  parser.rs  strategies.rs  token_store.rs
exactobar-store/: Cargo.toml
exactobar-store/src/: config.rs  error.rs  history.rs  keychain.rs  lib.rs  persistence.rs  persistence_tests.rs  settings_store.rs  state.rs  usage_store.rs
