[package]
name = "exactobar-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GPUI desktop application for ExactoBar"

[[bin]]
name = "exactobar-app"
path = "src/main.rs"

[dependencies]
exactobar-core = { workspace = true }
exactobar-fetch = { workspace = true }
exactobar-providers = { workspace = true }
exactobar-store = { workspace = true }
gpui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
smol = "2.0"
once_cell = "1.19"
rand = "0.8"
which = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }

# Icon rendering
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }
