[package]
name = "exactobar-fetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Fetch strategies and HTTP probes for ExactoBar"

[dependencies]
exactobar-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
keyring = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
portable-pty = { workspace = true }
strip-ansi-escapes = { workspace = true }
rusqlite = { workspace = true }
ring = { workspace = true }
